﻿Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

### 2018-07-03
	Fixed: Unhandled process exit is now handled.
### 2018-07-02
	Changed: Some debug output for monitor power states.
### 2018-06-30
	Fixed: Monitor sleep during lock is not giving up.

### 2018-06-29 Version 0.11
	Added: Option to minimize, reduce priority&affinity, and to kill hung foreground apps, based on time spent hung.

### 2018-06-28
	Fixed: Rare crash if OS task scheduler is not responding. Now wait longer, kill any lingering started processes, and be smarter.
### 2018-06-22
	Fixed: Monitor sleep during session lock does not work sometimes.
### 2018-06-15
	Fixed: Network status changes were not being informed as they should've been.
	Changed: Removed some pointless network device list updates and only marked the need for refreshing.
	Changed: Made some code paths exit early if they detect process they're dealing with having exited.
### 2018-06-08
	Fixed: Rare(?) crash if session lock monitor power down is enabled.
### 2018-06-03
	Fixed: Network tab does not update address when IP changes while the UI is open.
	Fixed: Network connected/disconnected log messages should no longer spam. This delays the messages for up to 15 seconds.
### 2018-06-01
	Fixed: Minor inconsequential crash during exit.
### 2018-05-26
	Changed: Less spammy logging when internet connection is disrupted.
### 2018-05-25
	Fixed: NullReferenceException at line 101
	Fixed: Default affinity strategy (limit) did not actually limit due to faults in bit flopping logics.
### 2018-05-23
	Added: Extra path cache/finding statistics on exit.
	Fixed: A fatal error related to failure to extract path from process module.
### 2018-05-21
	Changed: Dialog from component config now allows instant restarting of TM if so desired.
	Fixed: Problems with new unconfigured TM setups.
### 2018-05-20