@@ -106,6 +106,7 @@
   <ItemGroup>
     <Compile Include="ActiveAppManager.cs" />
     <Compile Include="Attributes.cs" />
+    <Compile Include="AudioManager.cs" />
     <Compile Include="ComponentContainer.cs" />
     <Compile Include="ConfigManager.cs" />
     <Compile Include="LicenseDialog.cs">
